# sbtdd-hermes

./: .gitignore  LICENSE-APACHE  README.md  __init__.py  plugin.yaml  pyproject.toml
.claude/tdd-guard/data/: test.json
commands/: sbtdd-check.md  sbtdd-init.md  sbtdd.md
docs/: implementability-analysis.md  implementation-plan-magi-revision.md  implementation-plan.md  migration-skill-to-plugin.md
references/: finalization.md  port-claude-to-hermes.md  review-gates.md  routing.md  tdd-cycle.md
sbtdd_hermes/: __init__.py  _config.py  backend_client.py  backend_config.py  commands.py  magi_parser.py  plugin.yaml  prompts.py  py.typed  scaffolding.py  state.py  validator.py
sbtdd_hermes/scripts/: __init__.py  commit_helper.py  drift_check.py  git_status.py  verify.py
skills/sbtdd/: README.md  SKILL.md
skills/sbtdd/references/: finalization.md  port-claude-to-hermes.md  review-gates.md  routing.md  tdd-cycle.md
templates/: HERMES.local.md.tmpl  sbtdd-backend.toml.tmpl  sbtdd.toml.tmpl  settings.json.tmpl  spec-behavior-base.tmpl.md
templates/verification/: cpp.md  python.md  rust.md
tests/: conftest.py  test_concurrency.py  test_config.py  test_magi_critical_fixes.py  test_magi_parser.py  test_magi_parser_chunks.py  test_ollama_backend.py  test_plugin.py  test_readme.py  test_sbtdd_check_backend.py  test_sbtdd_override.py  test_sbtdd_routing.py  test_sbtdd_status.py  test_scripts.py  test_skill.py  test_state.py  test_tdd_guard_limit.py  test_templates.py  test_update_state.py  test_validator.py
