[project]
name = "sbtdd-hermes"
version = "2.0.0"
requires-python = ">= 3.11"
dependencies = ["filelock"]
description = "SBTDD Spec + Behavior + TDD plugin for Hermes Agent (native plugin with scripts)"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [{name = "Julian Bolivar"}]
keywords = ["hermes", "sbtdd", "tdd", "spec-driven", "workflow", "magi", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.entry-points."hermes_agent.plugins"]
sbtdd = "sbtdd_hermes:register"

[project.urls]
Repository = "https://github.com/BolivarTech/sbtdd-hermes"
Homepage = "https://github.com/BolivarTech/sbtdd-hermes"
Issues = "https://github.com/BolivarTech/sbtdd-hermes/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["type-arg", "misc", "unused-ignore"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sbtdd_hermes*"]
